# PSR-trabalho-3

./: README.md
lixo/: lixo.txt  take_pic_arm.py  take_pic_base.py
outro_teste/: ola.txt
robutler_bringup_T3/: CMakeLists.txt  package.xml
robutler_bringup_T3/config/: rviz.rviz
robutler_bringup_T3/launch/: spawn.launch
robutler_bringup_T3/scripts/: apagar.py  detect.py  detect_spheres.py  mission_manager  mission_manager2  spawn_object.py  take_pic.py  take_pic2.py  take_pic_arm.py  teleop_key  teleop_key_test
robutler_bringup_T3/src/: turtlebot3_manipulation_bringup.cpp
robutler_bringup_t3/: CMakeLists.txt
robutler_bringup_t3/scripts/: teleop_key
robutler_description_T3/: CMakeLists.txt  package.xml
robutler_description_T3/urdf/: open_manipulator_x.gazebo.xacro  open_manipulator_x.urdf.xacro  robutler.urdf.xacro  turtlebot3_manipulation_robot.urdf.xacro
robutler_gui_T3/: CMakeLists.txt  package.xml
robutler_gui_T3/launch/: robutler_gui_T3.launch
robutler_gui_T3/src/: main.cpp  main_window.cpp  qnode.cpp
robutler_manipulation/: CMakeLists.txt  package.xml
robutler_moveit_config_T3/: CMakeLists.txt  package.xml  setup_assistant.txt
robutler_moveit_config_T3/config/: robutler_manipulation.srdf
robutler_moveit_config_T3/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  (+10 more)
robutler_navigation_T3/: CMakeLists.txt  package.xml
(+18 files in other folders)
